test/manifests/cluster/kyverno-rbac.yaml
# Copyright The kcp-apiexport-proxy Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Lets the Kyverno admission controller read the proxy's token, which the
# policy in policy.yaml needs to call the proxy.
apiVersion: rbac.authorization.k8s.io/v1
kind: Role
metadata:
  name: kyverno-read-proxy-credentials
  namespace: kcp-apiexport-proxy
rules:
  - apiGroups: ['']
    resources: [secrets]
    resourceNames:
      - kcp-apiexport-proxy-token
    verbs: [get]
---
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: kyverno-read-proxy-credentials
  namespace: kcp-apiexport-proxy
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: Role
  name: kyverno-read-proxy-credentials
subjects:
  - kind: ServiceAccount
    name: kyverno-admission-controller
    namespace: kyverno
