test/manifests/cluster/policy.yaml
# Copyright The kcp-apiexport-proxy Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Like config/samples/policy.yaml, but limited to ConfigMaps and pointing at
# the proxy deployed by proxy.yaml.
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: check-cluster-bound-to-apiexport
spec:
  failurePolicy: Fail
  validationActions:
    - Deny
  matchConstraints:
    resourceRules:
      - apiGroups: ['']
        apiVersions: [v1]
        operations: [CREATE, UPDATE]
        resources: [configmaps]
  matchConditions:
    - name: has-cluster-annotation
      expression: "has(object.metadata.annotations) && 'kcp.io/cluster' in object.metadata.annotations"
  variables:
    - name: cluster
      expression: "object.metadata.?annotations[?'kcp.io/cluster'].orValue('')"
    - name: apiBindings
      expression: >-
        http.Get('http://kcp-apiexport-proxy.kcp-apiexport-proxy.svc.cluster.local:8080/apiexportendpointslices/example.com/clusters/'
          + variables.cluster + '/apis/apis.kcp.io/v1alpha1/apibindings')
  validations:
    - expression: "has(variables.apiBindings.items) && variables.apiBindings.items.size() > 0"
      message: >-
        Logical cluster referenced by the "kcp.io/cluster" annotation has no
        APIBindings for this APIExport.
