test/manifests/cluster/proxy-values.yaml
# Copyright The kcp-apiexport-proxy Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Values for the kcp-apiexport-proxy chart, using the image the test builds
# and the kubeconfig Secret the test script creates.
image:
  repository: kcp-apiexport-proxy
  tag: test
  pullPolicy: Never

apiExportEndpointSliceNames:
  - example.com

kubeconfig:
  secretName: kcp-apiexport-proxy-kubeconfig
